fix word break in editor

--- a/src/app/renders/Slatejs/SlatejsRender.less
+++ b/src/app/renders/Slatejs/SlatejsRender.less
@@ -10,6 +10,6 @@
   overflow-y: auto;
 
   span {
-    word-break: break-all;
+    word-break: break-word;
   }
 }
